@@ -1,3 +1,7 @@
+2007-10-05  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
+	* src/DisplayTabs/_GalleryTab.py (build_interface): Create custom cell
+	renderer for labels for better control.
+
 2007-10-05 Benny Malengier <benny.malengier@gramps-project.org> 
 	* src/DisplayTabs/_GalleryTab.py: remove bug that leads to database corruption,
 	if media is deleted in mediaview, remove media in all open gallery tabs
